# rdiff

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CharacterMap.h  ClockDummy.h  ClockFactory.cpp  ClockFactory.h  ClockReal.cpp  ClockReal.h  CoutLogger.cpp  CoutLogger.h  CyclicPolinomialRHash.cpp  CyclicPolinomialRHash.h  CyclicPolinomialRHashStorage.cpp  CyclicPolinomialRHashStorage.h  Parameters.cpp  Parameters.h  PolynomialRHash.h  PolynomialRHashStorage.h  Rdiff.cpp  Rdiff.h  RdiffBuilder.cpp  RdiffBuilder.h  main.cpp
src/IO/: FastFileInput.cpp  FastFileInput.h  FastFileOutput.cpp  FastFileOutput.h  FileInput.cpp  FileInput.h  FileOutput.cpp  FileOutput.h  IOFactory.cpp  IOFactory.h
src/Interfaces/: ClockInterface.h  HashGeneratorInterface.h  HashStorageInterface.h  InputInterface.h  LoggerInterface.h  OutputInterface.h
tests/: CMakeLists.txt  cyclic_polinomial_rhash.cpp  fast_file_input.cpp  fast_file_output.cpp  main.cpp  parameters.cpp  polynomial_rhash.cpp  rdiff.cpp  rdiff_app.cpp
tests/test_cases/t0/: output_gen_delta_h2_o.txt  output_gen_patch_h2_o.txt
tests/test_cases/t1/: new_file.txt
tests/test_cases/t10/: checklist  copy_output.txt  output_gen_delta_h1_o.txt  output_gen_delta_h2_o.txt  output_gen_patch_h1_o.txt
tests/test_cases/t11/: base_file  checklist  new_file  output_gen_delta_h1_o.txt  output_gen_delta_h2_o.txt
tests/test_cases/t2/: new_file.txt  output_gen_delta_h1_o.txt  output_gen_delta_h2_o.txt
tests/test_cases/t3/: new_file.txt  output_gen_delta_h1_o.txt  output_gen_delta_h2_o.txt  output_gen_sign_h1_o.txt
(+10 files in other folders)
